Lagt till homepage och detailpage med react routing. Lagt till navbar, sidebar. Mer fix behövs

--- a/src/index.css
+++ b/src/index.css
@@ -1,76 +1,23 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.logo-link{
+  text-decoration: none;
+  color: #8DC7D9;
 }
 
 /* ==== START ==== CSS för ThreadCard och ThreadList */
 
 .thread-card{
-  width: 900px;
+  min-width: 900px;
+  margin-left: 2rem;
+  padding-block: 2rem;
+
+  .thread-link{
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .thread-info{
@@ -90,7 +37,10 @@ button:focus-visible {
   border: none;
   background-color: #8DC7D9;
   height: 2px;
-  margin: 2rem 0;
+  width: 95%;
+  margin: 0 auto;
+  
+  
 }
 
 .thread-body-text{
@@ -123,3 +73,33 @@ button:focus-visible {
   background-color: lightgray;
 }
 /* ==== SLUT ==== CSS för ThreadCard och ThreadList */
+
+.layout-container{
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.sidebar-container{
+  width: 200px;
+}
+
+.navbar-container{
+  text-align: left;
+  font-size: 2rem;
+
+
+  .navbar-divider{
+    border-bottom: 2px solid #8DC7D9;
+    height: 2px;
+  }
+}
+
+.sidebar-container{
+  height: 1000px;
+}
+
+.side-divider{
+  border-right: 2px solid #8DC7D9;
+  height: 100%;
+  
+}
