--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 :root{
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0 1remrem;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .logo-link{
@@ -86,12 +89,16 @@
 .navbar-container{
   text-align: left;
   font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  
 
 
-  .navbar-divider{
-    border-bottom: 2px solid #8DC7D9;
-    height: 2px;
-  }
+}
+.navbar-divider{
+  border-bottom: 2px solid #8DC7D9;
+  height: 2px;
 }
 
 .sidebar-container{
@@ -102,4 +109,75 @@
   border-right: 2px solid #8DC7D9;
   height: 100%;
   
+}
+
+.navbar-btns{
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar-btn{
+  background-color: transparent;
+  border: 1.5px solid #8DC7D9;
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  
+
+}
+.navbar-btn.active{
+  background-color: #8DC7D9;
+
+}
+
+.navbar-user{
+  border: none;
+  background-color: transparent;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 100px;
+  position: relative;
+}
+
+.dropdown-menu{
+  position: absolute;
+  right: -1rem;
+  margin-top: 6.4rem;
+  min-width: 300px;
+  min-height: 100vh;
+  background-color: white;
+  
+  font-size: 1rem;
+  
+  z-index: 101;
+  li{
+    list-style: none;
+    
+  }
+}
+
+.dropdown-overlay{
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.277);
+  z-index: 100;
+}
+
+.navbar-z-index{
+  z-index: 1001;
+}
+
+.dropdown-link-text{
+  text-decoration: none;
+  color: black;
+}
+
+.min-sida{
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-align: center;
 }
