--- a/src/index.css
+++ b/src/index.css
@@ -242,3 +242,28 @@
 .submit-button:hover {
   background: #05445e;
 }
+
+/* ==== START ==== CommentForm */
+
+.comment-form-input{
+  display: flex;
+  flex-direction: column;
+  gap: .2rem;
+
+  .input{
+    border: 1px solid #8DC7D9;
+    border-radius: 1rem;
+    padding-block: .5rem;
+    padding-left: 1rem;
+  }
+}
+
+.comment-form-container{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.comment-li{
+  list-style: none;
+}
