--- a/src/index.css
+++ b/src/index.css
@@ -291,7 +291,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .comment-submit-button:hover {
@@ -300,4 +300,18 @@
 
 .login-btn{
   background-color: #8DC7D9;
+}
+
+.locked-btn{
+  background: #189ab4;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  width: 150px;
+  margin-top: 1rem;
+  margin-left: 2rem;
 }
