--- a/src/index.css
+++ b/src/index.css
@@ -610,3 +610,36 @@
   border-radius: 5rem;
   
 }
+
+.login-form-container{
+ 
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.login-button{
+    background: #189ab4;
+  color: white;
+  padding: 0.8rem 1.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  max-width: 200px;
+  transition: 0.2s ease-in-out;
+}
+
+.login-button:hover {
+  background: #8DC7D9;
+}
+
+.login-input{
+  
+}
+a{
+  text-decoration: underline;
+  color: black;
+  cursor: pointer;
+}
